--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -19,7 +19,18 @@
 
 			<form id="form" autocomplete="off">
 				<div class="sub-heading">
-					<div>Faceit</div>
+					<div>
+						Faceit
+						<span
+							title="Enabling this provides insights into the win rate percentage of different maps on the FACEIT platform"
+						>
+							<svg class="feature-helper" viewBox="0 0 24 24">
+								<path
+									d="M11.07 12.85c.77-1.39 2.25-2.21 3.11-3.44.91-1.29.4-3.7-2.18-3.7-1.69 0-2.52 1.28-2.87 2.34L6.54 6.96C7.25 4.83 9.18 3 11.99 3c2.35 0 3.96 1.07 4.78 2.41.7 1.15 1.11 3.3.03 4.9-1.2 1.77-2.35 2.31-2.97 3.45-.25.46-.35.76-.35 2.24h-2.89c-.01-.78-.13-2.05.48-3.15zM14 20c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2z"
+								></path>
+							</svg>
+						</span>
+					</div>
 					<div>
 						<label class="toggle">
 							<input
@@ -39,11 +50,7 @@
 							<span
 								title="Edit time frame from which to get statistics (100 matches max)"
 							>
-								<svg
-									class="option-helper"
-									id="time-frame-helper"
-									viewBox="0 0 24 24"
-								>
+								<svg class="option-helper" viewBox="0 0 24 24">
 									<path
 										d="M11.07 12.85c.77-1.39 2.25-2.21 3.11-3.44.91-1.29.4-3.7-2.18-3.7-1.69 0-2.52 1.28-2.87 2.34L6.54 6.96C7.25 4.83 9.18 3 11.99 3c2.35 0 3.96 1.07 4.78 2.41.7 1.15 1.11 3.3.03 4.9-1.2 1.77-2.35 2.31-2.97 3.45-.25.46-.35.76-.35 2.24h-2.89c-.01-.78-.13-2.05.48-3.15zM14 20c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2z"
 									></path>
@@ -151,7 +158,18 @@
 				</div>
 
 				<div class="sub-heading">
-					<div>Steam</div>
+					<div>
+						Steam
+						<span
+							title="Enabling this allows you to view FACEIT account details directly on Steam profiles"
+						>
+							<svg class="feature-helper" viewBox="0 0 24 24">
+								<path
+									d="M11.07 12.85c.77-1.39 2.25-2.21 3.11-3.44.91-1.29.4-3.7-2.18-3.7-1.69 0-2.52 1.28-2.87 2.34L6.54 6.96C7.25 4.83 9.18 3 11.99 3c2.35 0 3.96 1.07 4.78 2.41.7 1.15 1.11 3.3.03 4.9-1.2 1.77-2.35 2.31-2.97 3.45-.25.46-.35.76-.35 2.24h-2.89c-.01-.78-.13-2.05.48-3.15zM14 20c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2z"
+								></path>
+							</svg>
+						</span>
+					</div>
 					<div>
 						<label class="toggle">
 							<input
