--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>VisusGG</title>
+		<link rel="stylesheet" href="popup.css" />
+		<script type="module" src="popup.js" defer></script>
 	</head>
 
 	<body>
@@ -20,7 +22,7 @@
 			<form id="form" autocomplete="off">
 				<div class="sub-heading">
 					<div>
-						Faceit
+						FaceIt
 						<span
 							title="Enabling this provides insights into the win rate percentage of different maps on the FACEIT platform"
 						>
@@ -195,7 +197,5 @@
 				</div>
 			</form>
 		</main>
-
-		<script scr="popup.js"></script>
 	</body>
 </html>
